[DevTools] Fix problem with loading source maps

Encode not utf8 chunk as base 64 and then decode it on frontend side.

BUG=611328
R=dgozman@chromium.org

Review-Url: https://codereview.chromium.org/2032013003
Cr-Commit-Position: refs/heads/master@{#397618}

Former-commit-id: 72c30193f0804fff83ed73d92db7d5fc5df6b186